--- a/index.html
+++ b/index.html
@@ -17,22 +17,17 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
-                        Home
-                    </a>
+                    <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/login.html" class="navbar__links">
-                        Login
-                    </a>
+                    <a href="/login.html" class="navbar__links">Login</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="/register.html" class="navbar__links">
-                        Register
-                    </a>
+                <li class="navbar__btn">
+                    <a href="/register.html" class="button">Register</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <script src="app.js"></script>
 </body>
 </html>
