Search UI added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
             </ul>
         </div>
     </nav>
+
+<!-- Search Engine Section -->
+<div class="main">
+    <div class="main__container">
+        <div class="main__header">
+            <h1>Find the Perfect Apartment</h1>
+            <p>See what makes home, "home".</p>
+        </div>
+        <div class="main__img--container">
+            <img id="main__img" src="images/ApartmentHomePage.svg" />
+            <input type="text" id="zipcode" class="zipcode__input" placeholder="Enter Zipcode">
+            <button class="main__btn"><a href="#">Search Apartments</a></button>
+        </div>
+    </div>
+</div>
+
     <script src="app.js"></script>
 </body>
 </html>
