Added search page with filter icon and filter categories

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="main__img--container">
             <img id="main__img" src="images/ApartmentHomePage.svg" />
             <input type="text" id="zipcode" class="zipcode__input" placeholder="Enter Zipcode">
-            <button class="main__btn"><a href="#">Search Apartments</a></button>
+            <button class="main__btn"><a href="results.html">Search Apartments</a></button>
         </div>
     </div>
 </div>
