--- a/results.html
+++ b/results.html
@@ -29,6 +29,10 @@
         </div>
     </nav>
 
+    <div class="left-fixed-image">
+        <img src="images/undrawLocation.svg" alt="Fixed Image" />
+    </div>
+
     <!-- Search Page Section -->
     <div class="search-container">
         <div class="search-header">
@@ -70,10 +74,42 @@
             </div>
         </div>
         <ul id="apartmentList">
-            <li data-zipcode="12345" data-price="1500" data-bedrooms="2" data-bathrooms="2">Apartment 1: $1500, 2 Bedrooms, 2 Bathrooms, Zip: 12345</li>
-            <li data-zipcode="67890" data-price="2500" data-bedrooms="3" data-bathrooms="3">Apartment 2: $2500, 3 Bedrooms, 3 Bathrooms, Zip: 67890</li>
-            <li data-zipcode="12345" data-price="1200" data-bedrooms="1" data-bathrooms="1">Apartment 3: $1200, 1 Bedroom, 1 Bathroom, Zip: 12345</li>
-            <li data-zipcode="67890" data-price="3000" data-bedrooms="4" data-bathrooms="4">Apartment 4: $3000, 4 Bedrooms, 4 Bathrooms, Zip: 67890</li>
+            <li data-zipcode="12345" data-price="1500" data-bedrooms="2" data-bathrooms="2">
+                <div class="listing">
+                    <h3>Apartment 1</h3>
+                    <p>Price: $1500</p>
+                    <p>Bedrooms: 2</p>
+                    <p>Bathrooms: 2</p>
+                    <p>Zip: 12345</p>
+                </div>
+            </li>
+            <li data-zipcode="67890" data-price="2500" data-bedrooms="3" data-bathrooms="3">
+                <div class="listing">
+                    <h3>Apartment 2</h3>
+                    <p>Price: $2500</p>
+                    <p>Bedrooms: 3</p>
+                    <p>Bathrooms: 3</p>
+                    <p>Zip: 67890</p>
+                </div>
+            </li>
+            <li data-zipcode="12345" data-price="1200" data-bedrooms="1" data-bathrooms="1">
+                <div class="listing">
+                    <h3>Apartment 3</h3>
+                    <p>Price: $1200</p>
+                    <p>Bedrooms: 1</p>
+                    <p>Bathrooms: 1</p>
+                    <p>Zip: 12345</p>
+                </div>
+            </li>
+            <li data-zipcode="67890" data-price="3000" data-bedrooms="4" data-bathrooms="4">
+                <div class="listing">
+                    <h3>Apartment 4</h3>
+                    <p>Price: $3000</p>
+                    <p>Bedrooms: 4</p>
+                    <p>Bathrooms: 4</p>
+                    <p>Zip: 67890</p>
+                </div>
+            </li>
         </ul>
     </div>
 
