--- a/index.html
+++ b/index.html
@@ -45,5 +45,28 @@
 </div>
 
     <script src="app.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyDzbLT3EPkXDhmkb8h1vdViuD1-afAuGvo",
+          authDomain: "aptmate-b5eb0.firebaseapp.com",
+          projectId: "aptmate-b5eb0",
+          storageBucket: "aptmate-b5eb0.appspot.com",
+          messagingSenderId: "1030969940790",
+          appId: "1:1030969940790:web:6d74eaf667634028aab197",
+          measurementId: "G-S1B64G2BXK"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 </html>
