--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <title>AptMate</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="register-page">
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/" id="navbar__logo">AptMate</a>
@@ -28,3 +28,30 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container">
+        <form class="register-form">
+            <h2>Register</h2>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="retype-password">Retype Password</label>
+                <input type="password" id="retype-password" name="retype-password" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
