Register basic UI done

--- a/register.html
+++ b/register.html
@@ -29,6 +29,14 @@
         </div>
     </nav>
 
+    <div class="register__img--container">
+        <img id="register__img" src="images/RegisterImage.svg" />
+    </div>
+    <div class="register2__img--container">
+        <img id="register2__img" src="images/RegisterImage2.svg" />
+    </div>
+
+    <!-- Register Section -->
     <div class="container">
         <form class="register-form">
             <h2>Register</h2>
