Added "Have an account?" button to register page

--- a/register.html
+++ b/register.html
@@ -59,6 +59,9 @@
             <div class="form-group">
                 <button type="submit">Submit</button>
             </div>
+            <div class="form-group">
+                <a href="/login.html" class="login-link">Have an account?</a>
+            </div>
         </form>
     </div>
 </body>
