--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
             <div class="form-group">
                 <button type="submit">Submit</button>
             </div>
-            <div class="form-group">
+            <div class="form-group center-text">
                 <a href="/register.html" class="register-link">Need to register?</a>
             </div>
         </form>
