--- a/register.html
+++ b/register.html
@@ -22,6 +22,9 @@
                 <li class="navbar__item">
                     <a href="/login.html" class="navbar__links">Login</a>
                 </li>
+                <li class="navbar__item">
+                    <a href="/favorites.html" class="navbar__links">Favorites</a>
+                </li>
                 <li class="navbar__btn">
                     <a href="/register.html" class="button">Register</a>
                 </li>
