fixed eye icons and organized js pages

--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
         <img id="register2__img" src="images/RegisterImage2.svg" />
     </div>
 
-    <!-- Register Section !!!!  THIS IS WHERE THE EYE ICONS LIVEEEEEE  !!!!-->
+    <!-- Register Section !!!!  THIS IS WHERE THE EYE ICONS LIVEEEEEE  !!!! -->
     <div class="container">
         <form class="register-form">
             <h2>Register</h2>
@@ -52,14 +52,14 @@
                 <label for="password">Password</label>
                 <div class="password-container">
                     <input type="password" id="password" name="password" required>
-                    <img src="images/eyeOpen.svg" class="toggle-password" id="togglePassword1" alt="Show Password">
+                    <img src="images/eyeClosed.svg" class="toggle-password" id="togglePassword1" alt="Show Password">
                 </div>
             </div>
             <div class="form-group">
                 <label for="retype-password">Retype Password</label>
                 <div class="password-container">
                     <input type="password" id="retype-password" name="retype-password" required>
-                    <img src="images/eyeOpen.svg" class="toggle-password" id="togglePassword2" alt="Show Password">
+                    <img src="images/eyeClosed.svg" class="toggle-password" id="togglePassword2" alt="Show Password">
                 </div>
             </div>
             <div class="form-group">
@@ -72,5 +72,6 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="eyeIcon.js"></script>
 </body>
 </html>
