--- a/register.html
+++ b/register.html
@@ -41,29 +41,18 @@
         <form class="register-form">
             <h2>Register</h2>
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="useremail">Email</label>
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
+                <label for="userpassword">Password</label>
                 <div class="password-container">
                     <input type="password" id="password" name="password" required>
                     <img src="images/eyeOpen.svg" class="toggle-password" id="togglePassword1" alt="Show Password">
                 </div>
             </div>
             <div class="form-group">
-                <label for="retype-password">Retype Password</label>
-                <div class="password-container">
-                    <input type="password" id="retype-password" name="retype-password" required>
-                    <img src="images/eyeOpen.svg" class="toggle-password" id="togglePassword2" alt="Show Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <button type="submit">Submit</button>
+                <button type="submit" id="submitbutton">Submit</button>
             </div>
             <div class="form-group">
                 <a href="/login.html" class="login-link">Have an account?</a>
@@ -71,6 +60,7 @@
         </form>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="register.js" defer></script>
+
 </body>
 </html>
