Updated Login and Favorites Tabs with separate css

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - AptMate</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body class="login-page">
     <nav class="navbar">
@@ -31,13 +31,6 @@
             </ul>
         </div>
     </nav>
-
-    <div class="login__img--container">
-        <img id="login__img" src="images/LoginImage.svg" />
-    </div>
-    <div class="login2__img--container">
-        <img id="login2__img" src="images/LoginImage2.svg" />
-    </div>
 
     <!-- Login Section -->
     <div class="container">
