--- a/favorites.html
+++ b/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorites - AptMate</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="favorites.css">
 </head>
 <body>
     <nav class="navbar">
