Fixed a few things

--- a/apartment.html
+++ b/apartment.html
@@ -1,6 +1,7 @@
 <!-- 
  This page is for submitting apartment information into the database.
  It will be used for companies to submit their apartment information.
+ The UI needs to be updated!
 -->
 <!DOCTYPE html>
 <html>
@@ -9,13 +10,17 @@
 </head>
 <body>
 
-  <h1>Firebase Web Setup Example</h1>
-  
+  <h1>Apartment Database Submission</h1>
+
+  <!-- This is for account login for later
+
   <form id="authForm">
     <input type="email" id="email" placeholder="Email" required>
     <input type="password" id="password" placeholder="Password" required>
     <input type="submit" id="submitbutton" value="Create Account">
   </form>
+
+  -->
   
   <form id="apartmentForm">
     <input type="text" id="apartmentId" placeholder="Apartment ID" required>
@@ -26,7 +31,7 @@
     <input type="submit" id="saveApartmentButton" value="Save Apartment">
   </form>
 
-  <!-- Add Firebase products that you want to use -->
+ 
   <script type="module" src="database.js"></script>
 
 </body>
