--- a/results.html
+++ b/results.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Apartments</title>
+    <link rel = "stylesheet" href = "navbar/navbar.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
