--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Apartments</title>
-    <link rel = "stylesheet" href = "navbar/navbar.css">
+    <link rel="stylesheet" href="navbar/navbar.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -78,45 +78,39 @@
             </div>
         </div>
         <ul id="apartmentList">
-            <li data-zipcode="12345" data-price="1500" data-bedrooms="2" data-bathrooms="2">
-                <div class="listing">
-                    <h3>Apartment 1</h3>
-                    <p>Price: $1500</p>
-                    <p>Bedrooms: 2</p>
-                    <p>Bathrooms: 2</p>
-                    <p>Zip: 12345</p>
-                </div>
-            </li>
-            <li data-zipcode="67890" data-price="2500" data-bedrooms="3" data-bathrooms="3">
-                <div class="listing">
-                    <h3>Apartment 2</h3>
-                    <p>Price: $2500</p>
-                    <p>Bedrooms: 3</p>
-                    <p>Bathrooms: 3</p>
-                    <p>Zip: 67890</p>
-                </div>
-            </li>
-            <li data-zipcode="12345" data-price="1200" data-bedrooms="1" data-bathrooms="1">
-                <div class="listing">
-                    <h3>Apartment 3</h3>
-                    <p>Price: $1200</p>
-                    <p>Bedrooms: 1</p>
-                    <p>Bathrooms: 1</p>
-                    <p>Zip: 12345</p>
-                </div>
-            </li>
-            <li data-zipcode="67890" data-price="3000" data-bedrooms="4" data-bathrooms="4">
-                <div class="listing">
-                    <h3>Apartment 4</h3>
-                    <p>Price: $3000</p>
-                    <p>Bedrooms: 4</p>
-                    <p>Bathrooms: 4</p>
-                    <p>Zip: 67890</p>
-                </div>
-            </li>
+            <!-- Apartment listings will be dynamically inserted here -->
         </ul>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module">
+        import { fetchApartmentData } from './database.js';
+
+        async function displayApartments() {
+            const apartmentList = document.getElementById('apartmentList');
+            const apartments = await fetchApartmentData();
+
+            apartmentList.innerHTML = ''; // Clear existing content
+
+            if (apartments) {
+                Object.keys(apartments).forEach(key => {
+                    const apartment = apartments[key];
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `
+                        <div class="listing">
+                            <h3>${key}</h3>
+                            <p>Price: $${apartment.Price}</p>
+                            <p>Bedrooms: ${apartment.Bedroom}</p>
+                            <p>Bathrooms: ${apartment.Bathroom}</p>
+                            <p>Zip: ${apartment.ZipCode}</p>
+                        </div>
+                    `;
+                    apartmentList.appendChild(listItem);
+                });
+            }
+        }
+
+        // Fetch and display apartments on page load
+        window.onload = displayApartments;
+    </script>
 </body>
 </html>
