--- a/apartment-details.html
+++ b/apartment-details.html
@@ -1,3 +1,11 @@
+<!--
+
+This page is for the apartment details when the user clicks on an apartment in the results page.
+UI needs to be worked on.
+Favorites function needs to be added.
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
