--- a/apartment.html
+++ b/apartment.html
@@ -1,3 +1,11 @@
+<!--
+
+This html is used for organizations to submit apartment data.
+The UI needs to be worked on, even though the submission form will not be available to the general public.
+In the future, access to this html will only be allowed to verified apartment organizations.
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
