--- a/results.html
+++ b/results.html
@@ -78,7 +78,6 @@
             </div>
         </div>
         <ul id="apartmentList">
-            <!-- Apartment listings will be dynamically inserted here -->
         </ul>
     </div>
 
@@ -138,6 +137,5 @@
             }
         });
     </script>
-    <script src="filter.js"></script> <!-- Include filter.js -->
-</body>
+    <script src="filter.js"></script>
 </html>
