Updated listings to show amenities

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -86,6 +86,7 @@
                     <div class="detail-item"><span class="detail-label">Bedrooms:</span> ${apartmentDetails.Bedroom}</div>
                     <div class="detail-item"><span class="detail-label">Bathrooms:</span> ${apartmentDetails.Bathroom}</div>
                     <div class="detail-item"><span class="detail-label">Zip Code:</span> ${apartmentDetails.ZipCode}</div>
+                    <div class="detail-item"><span class="detail-label">Amenities:</span> ${apartmentDetails.Amenities}</div>
                 `;
             }
         }
