Added comments to organize functions and blocks better.

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -1,4 +1,5 @@
 
+<!-- This html file is for displaying the details and images of the selected apartment listing once it has been selected from the results page. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
