started formatting results page, getting ready to add favorites icon

--- a/results.html
+++ b/results.html
@@ -33,9 +33,7 @@
         </div>
     </nav>
 
-    <div class="left-fixed-image">
-        <img src="images/undrawLocation.svg" alt="Fixed Image" />
-    </div>
+    <!-- took out svg image here -->
 
     <!-- Search Page Section -->
     <div class="search-container">
