Added heart icon function to global list of functions in main script, updated hearticon.js with framework for moving data to the favorites page.

--- a/results.html
+++ b/results.html
@@ -127,6 +127,8 @@
         import './filter.js'; 
         import { toggleHeart } from './hearticon.js';
 
+        window.toggleHeart = toggleHeart;
+
         async function displayApartments() {
             const apartmentList = document.getElementById('apartmentList');
             const apartments = await fetchApartmentData();
