--- a/apartment-details.html
+++ b/apartment-details.html
@@ -1,5 +1,3 @@
-
-<!-- This html file is for displaying the details and images of the selected apartment listing once it has been selected from the results page. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,12 +80,15 @@
             if (apartmentDetails) {
                 document.getElementById('apartmentTitle').innerText = `${apartmentId}`;
                 const detailsContainer = document.getElementById('apartmentDetails');
+                const amenities = Array.isArray(apartmentDetails.Amenities)
+                    ? apartmentDetails.Amenities.join(', ')
+                    : apartmentDetails.Amenities;
                 detailsContainer.innerHTML = `
                     <div class="detail-item"><span class="detail-label">Price:</span> $${apartmentDetails.Price}</div>
                     <div class="detail-item"><span class="detail-label">Bedrooms:</span> ${apartmentDetails.Bedroom}</div>
                     <div class="detail-item"><span class="detail-label">Bathrooms:</span> ${apartmentDetails.Bathroom}</div>
                     <div class="detail-item"><span class="detail-label">Zip Code:</span> ${apartmentDetails.ZipCode}</div>
-                    <div class="detail-item"><span class="detail-label">Amenities:</span> ${apartmentDetails.Amenities}</div>
+                    <div class="detail-item"><span class="detail-label">Amenities:</span> ${amenities}</div>
                 `;
             }
         }
