Updated navbar to use the firebase authentication for signed in users. Also displays the user and  hides the navbar items that will not be needed.  Minor updates to most pages to include the  updated navbar with user info.

--- a/apartment-details.html
+++ b/apartment-details.html
@@ -8,30 +8,7 @@
     <link rel="stylesheet" href="apartment-details.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar__container">
-            <a href="/" id="navbar__logo">AptMate</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/login.html" class="navbar__links">Login</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/favorites.html" class="navbar__links">Favorites</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="/register.html" class="button">Register</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div id="navbar-container"></div>
 
     <div class="apartment-details-container">
         <h1 id="apartmentTitle">Apartment Details</h1>
@@ -96,5 +73,6 @@
         // Fetch and display apartment details on page load
         window.onload = displayApartmentDetails;
     </script>
+    <script type="module" src="navbar/navbar.js"></script>
 </body>
 </html>
