--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- HTML for the Main home page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +25,7 @@
         </div>
     </div>
 
-    <script src="navbar/navbar.js"></script>
+    <script type="module" src="navbar/navbar.js"></script>
     <script>
         document.getElementById('searchBtn').addEventListener('click', function() {
             const zipcode = document.getElementById('zipcode').value;
