--- a/favorites.html
+++ b/favorites.html
@@ -18,6 +18,6 @@
         </ul>
     </div>
 
-    <script src="navbar/navbar.js"></script>
+    <script type="module" src="navbar/navbar.js"></script>
 </body>
 </html>
