--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -22,10 +22,15 @@
             <li class="navbar__item">
                 <a href="/favorites.html" class="navbar__links">Favorites</a>
             </li>
-            <li class="navbar__btn">
+            <li class="navbar__btn" id="registerBtn">
                 <a href="/register.html" class="button">Register</a>
+            </li>
+            <li class="navbar__item" id="userMenu" style="display: none;">
+                <span id="userEmail" class="navbar__links"></span>
+                <a href="#" class="navbar__links" id="logoutBtn">Logout</a>
             </li>
         </ul>
     </div>
 </nav>
 </body>
+</html>
